syntax = "proto3";

package com.nowid.safe.data;

message PasswordStore {
  // List of encrypted data
  repeated EncryptedPasswordData entries = 1;

  // Encrypted data
  message EncryptedPasswordData {
    PasswordItem passwordItem = 1;
    bytes iv = 2;
    bytes encryptedPassword = 3;

    // Display entity
    message PasswordItem {
      string id = 1;
      string title = 2;
    }
  }
}
